// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Prodeology's group destination action: all fields 1`] = `
Object {
  "anonymousId": "vn$doX7fYns)$aV",
  "groupId": "vn$doX7fYns)$aV",
  "messageId": "vn$doX7fYns)$aV",
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "vn$doX7fYns)$aV",
  },
  "userId": "vn$doX7fYns)$aV",
}
`;

exports[`Testing snapshot for Prodeology's group destination action: required fields 1`] = `
Object {
  "groupId": "vn$doX7fYns)$aV",
  "messageId": "vn$doX7fYns)$aV",
  "timestamp": Any<String>,
}
`;
